tests/ui/macros/assert-desugaring-145770.stderr
error[E0308]: mismatched types
  --> $DIR/assert-desugaring-145770.rs:20:11
   |
LL |   assert!(f);
   |           ^ expected `bool`, found `F`
   |
help: you might have meant to use field `data` whose type is `bool`
   |
LL |   assert!(f.data);
   |            +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
